# arm

./: AGENTS.md  README.md  arm.md  cabal.project
.github/workflows/: ci.yml
arm-core/: arm-core.cabal
arm-core/src/Arm/: Core.hs
arm-core/test/: Main.hs
arm-example-task/: arm-example-task.cabal
arm-example-task/app/: Main.hs
arm-postgresql/: arm-postgresql.cabal
arm-postgresql/src/Arm/: PostgreSQL.hs
arm-wai/: arm-wai.cabal
arm-wai/src/Arm/: Wai.hs
arm-wai/test/: Main.hs
docs/: library-example-boundary.md  mvp-scope.md  url-design.md
