cabal-version: 3.8
name: arm-core
version: 0.1.0.0
synopsis: Core abstractions for Algebra Relational Mapping
description:
  Core package boundary for ARM. This package must stay independent from
  HTTP servers, web adapters, and database interpreters.
category: Web
build-type: Simple
license: NONE

library
  exposed-modules:
      Arm.Core
  hs-source-dirs:
      src
  build-depends:
      base >=4.18 && <5
  default-language: GHC2021
  ghc-options: -Wall

test-suite arm-core-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs:
      test
  build-depends:
      arm-core,
      base >=4.18 && <5,
      tasty >=1.5 && <1.6,
      tasty-quickcheck >=0.10 && <0.12
  default-language: GHC2021
  ghc-options: -Wall
