cabal-version: 3.8
name: arm-postgresql
version: 0.1.0.0
synopsis: PostgreSQL integration boundary for Algebra Relational Mapping
description:
  SQL interpreter package boundary for ARM. Real PostgreSQL execution belongs
  here, while arm-core remains independent from database dependencies.
category: Web
build-type: Simple
license: NONE

library
  exposed-modules:
      Arm.PostgreSQL
  hs-source-dirs:
      src
  build-depends:
      arm-core
    , aeson >=2.0 && <2.3
    , base >=4.18 && <5
    , bytestring >=0.11 && <0.13
    , postgresql-simple >=0.7 && <0.8
    , resource-pool >=0.4 && <0.5
    , scientific >=0.3 && <0.4
    , text >=2.0 && <2.2
  default-language: GHC2021
  ghc-options: -Wall
